<resources>
    <string name="app_name">InstantAppBundle</string>
    <string name="load_feature_aboutus">Start About Us </string>
    <string name="load_feature_announcment">Start Announcement</string>
    <string name="loading">Loading</string>
    <string name="install_all_features_now">Install all features now</string>
    <string name="request_uninstall">Request module uninstall</string>
    <string name="instant_dynamic_feature_split_install">Instant split install</string>
    <string name="instant_dynamic_feature_url_load">Install split install via url</string>

    <string name="user_cancelled">The user cancelled module installation</string>
    <string name="loading_module">Loading module %1$s</string>
    <string name="already_installed">Already installed</string>
    <string name="starting_install_for">Starting install for %1$s</string>
    <string name="downloading">Downloading %1$s</string>
    <string name="installing">Installing %1$s</string>
    <string name="error_for_module">Error: %1$i for module %2$s</string>
    <string name="asset_content">Asset content</string>
    <string name="title_initialinstall">Initial Installation</string>
    <string name="title_dynamicfeature">AboutUs</string>
    <string name="title_announcement">Announcement</string>
    <string name="title_aboutus">Module Title</string>


    <string name="module_feature_aboutus">aboutus</string>
    <string name="module_feature_announcement">announcement</string>
    <string name="module_feature_splitinstant">instantsplit</string>
    <string name="module_feature_instant_url">https://androidbundle-eef4c.firebaseapp.com/url</string>
    <string name="title_instanturl">TermsAndConditions</string>
    <string name="title_instantsplit">InstantSplit</string>
</resources>
