<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <Button
        android:id="@+id/btn_load_aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/textColorPrimary"
        android:textColor="@color/white"
        android:text="@string/load_feature_aboutus"
        />

    <Button
        android:id="@+id/btn_load_announcement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/textColorPrimary"
        android:textColor="@color/white"
        android:text="@string/load_feature_announcment"
        />


    <Button
        android:id="@+id/btn_install_all_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/textColorPrimary"
        android:textColor="@color/white"
        android:text="@string/install_all_features_now" />


    <Button
        android:id="@+id/btn_request_uninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/textColorPrimary"
        android:textColor="@color/white"
        android:text="@string/request_uninstall" />

    <Button
        android:id="@+id/btn_instant_dynamic_feature_split_install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/textColorPrimary"
        android:textColor="@color/white"
        android:text="@string/instant_dynamic_feature_split_install" />

    <Button
        android:id="@+id/btn_instant_dynamic_feature_url_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/textColorPrimary"
        android:textColor="@color/white"
        android:text="@string/instant_dynamic_feature_url_load" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/progress_text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/textColorPrimary"
        android:text="@string/loading" />

</LinearLayout>